added google analytics

--- a/chat.html
+++ b/chat.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-251YX9WVJ0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-251YX9WVJ0');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatt</title>
+    <meta name="description" content="En sida där man kan chatta med de man är intresserade av och sina matchningar">
+    <meta name="keywords" content="dejta, dejting, kärlek, partner, dejt, hitta kärlek, börja dejta, hitta en partner, chatta, chatta med någon">
+    <meta name="author" content="Ljuva livet, Josefin Drakopoulou">
+
+    <title>Ljuva livet - Chatt</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="placering.css">
 </head>
@@ -22,10 +36,48 @@
 
 
         <ul id="menu"></ul>
-
-       
-
     </header>
+<br>
+<br>
+
+
+
+<div class="chatta">
+<h1 class="chatrubrik">Chatt med Misha Karlsson</h1>
+
+<p>Hej!</p>
+<br>
+<p class="chattme">Hej Misha! Hur mår du?</p>
+<br> 
+<p>Jag mår bra tack! Hur mår du?</p>
+<br>
+<p class="chattmee">Det är bra nu när jag pratar med dig ;)</p>
+<br>
+<p class="skrivtext">Skriver...........</p>
+
+
+<br>
+<br>
+<label for="info">Skriv in ett meddelande..</label>
+<br>
+<textarea id="info" name="info" cols="80" rows="5"></textarea>
+<br>
+
+
+
+<br>
+        <input type="button" value="Skicka" class="skickaknapp">
+<br> 
+
+</div>
+
+
+
+
+
+
+
+
     <br>
     <br>
 
