--- a/regristrera.html
+++ b/regristrera.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-251YX9WVJ0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-251YX9WVJ0');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Regristrera</title>
+    <meta name="description" content="En sida där man kan regristrera sig och bli medlem på Ljuvalivet">
+    <meta name="keywords" content="dejta, dejting, kärlek, partner, dejt, hitta kärlek, börja dejta, hitta en partner">
+    <meta name="author" content="Ljuva livet, Josefin Drakopoulou">
+
+
+
+    <title>Ljuva livet - Regristrera</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="placering.css">
 </head>
@@ -21,8 +37,9 @@
             </div>
         </div>
        <ul id="menu"></ul>
-
-    
+    <br>
+    <br>
+    <div class="regristreras">
        <h3 class="reg">Starta din kärleksresa</h3>
        <p class="medlemk">Bli medlem utan kostnad</p>
        <p class="google">Fortsätt med Google</p>
@@ -73,8 +90,10 @@
        <input type="button" value="Bli medlem" class="inloggknapp">
       <br>
       <br>
-      
-  
+    </header>
+    </body>
+    </html>
+    </div>
 
 
 
