--- a/loggain.html
+++ b/loggain.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-251YX9WVJ0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-251YX9WVJ0');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logga in/regristrera dig</title>
+    <meta name="description" content="Ljuvalivet inloggningssida">
+    <meta name="keywords" content="dejta, dejting, kärlek, partner, dejt, hitta kärlek, börja dejta, hitta en partner">
+    <meta name="author" content="Ljuva livet, Josefin Drakopoulou">
+
+    <title>Ljuvalivet - Logga in</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="placering.css">
 </head>
@@ -24,6 +38,7 @@
         <ul id="menu"></ul>
     <br>
     <br>
+    <div class="loggs">
         <h3 class="loggain">Välkommen tillbaka!</h3>
         <p class="google">Fortsätt med Google</p>
         <p class="apple">Fortsätt med Apple</p>
@@ -45,6 +60,9 @@
    
 
     </header>
+    </body>
+    </html>
+    </div>
     <br>
     <br>
     <br>
