--- a/preferenser.html
+++ b/preferenser.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-251YX9WVJ0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-251YX9WVJ0');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preferenser</title>
+    <meta name="description" content="En sida där man får skriva in sina preferenser och beskriva vad man söker hos en partner">
+    <meta name="keywords" content="dejta, dejting, kärlek, partner, dejt, hitta kärlek, börja dejta, hitta en partner">
+    <meta name="author" content="Ljuva livet, Josefin Drakopoulou">
+
+
+    <title>Ljuva livet - Preferenser</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="placering.css">
 </head>
@@ -29,9 +44,8 @@
 </header>
 <br>
 <br>
-
+<div class="preferens">
 <h1>Preferensanalys</h1>
-
 
     <p>Jag attraheras av:</p>
         <input type="radio" name="attract" id="mane" value="mane">
@@ -108,10 +122,12 @@
         <br>
         <br>
         <br>
+</html>
+</div>
+<br>
+<br>
 
 
-
-        
         <footer>
             <div class="footerrubrik">
             <div class="footertext"> 
