--- a/preferenslista.html
+++ b/preferenslista.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-251YX9WVJ0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-251YX9WVJ0');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preferenslista</title>
+    <meta name="description" content="En sida där man får upp sina matchningar utifrån preferenserna man har skrivit in och det man har beskrivit om sig själv">
+    <meta name="keywords" content="dejta, dejting, kärlek, partner, dejt, hitta kärlek, börja dejta, hitta en partner. matchningar">
+    <meta name="author" content="Ljuva livet, Josefin Drakopoulou">
+
+    <title>Ljuva livet - Dina matchningar</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="placering.css">
 </head>
