--- a/skickaflirt.html
+++ b/skickaflirt.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-251YX9WVJ0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-251YX9WVJ0');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skicka flirt</title>
+    <meta name="description" content="En sida där man kan skicka/skriva en flirt till någon man är intresserad av">
+    <meta name="keywords" content="dejta, dejting, kärlek, partner, dejt, hitta kärlek, börja dejta, hitta en partner, flirta">
+    <meta name="author" content="Ljuva livet, Josefin Drakopoulou">
+
+    <title>Ljuva livet - Skicka flirt</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="placering.css">
 </head>
