--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <br>
     <br>
 
-
+<div class="leftmargin"> 
     <img class="bild floating" src="images/love.jpeg">
     <h3>Varför Ljuva livet?</h3>
     <p>Vi på Ljuva livet har ett mål. Vi tycker att alla förtjänar kärlek, ung och sprallig kärlek likväl som trygg och harmonisk kärlek. Kärlek som får lov att växa fram, en dag i taget. Vi är alla olika och hur vi hittar kärleken skiljer sig åt. Målet är dock alltid detsamma: att hitta någon som passar just dig. 
@@ -55,7 +55,7 @@
    <br>
    <br>
    <br>
-
+</div>
     <h2>Singlar på Ljuva livet</h2>
 
     <div class="mittentext">
@@ -102,6 +102,8 @@
             <p>Dejtingtips</p>
             <p>Online-hjälp</p>
             <p>Säkerhetstips</p>
+            <br>
+            <p>Sidan använder cookies</p>
         </div>
         <div class="footertext">
             <h4>Om oss</h4>
