bilden på killarna ändrad

--- a/index.html
+++ b/index.html
@@ -83,10 +83,12 @@
     <br>
     <br>
     <br>
+    <div class="leftmargin"> 
     <h3>Dejta tryggt och säkert</h3>
     <p>Det är viktigt att du ska känna dig helt trygg och bekväm med att leta efter en ny partner på Ljuva livet. Därför finns det många funktioner som verkar i bakgrunden för att skapa en säker och pålitlig plats att vistas på. Alla bilder och profiler godkänns manuellt av oss. När en ny profil registreras så ser Kundtjänst till så att den överensstämmer med Mötesplatsens regler och policies.</p>
         <p>Vår kundtjänst är på plats mellan 08-23 varje dag. Under den tiden arbetas det löpande med att ta hand om alla de ärenden som kommer in, godkänna bilder och profiler, samt hantera eventuella problem med betalningar. Alla inkomna frågor besvaras inom 24 timmar, oftast mycket snabbare än så.</p>
          <input type="button" value="Läs mer" class="knapp">
+        </div>
     <br>
     <br>
     <br>
