--- a/preferenslista.html
+++ b/preferenslista.html
@@ -45,13 +45,15 @@
 <h1 class="matchningar">Dina matchningar</h1>
 
 
-<img class="marcus" src="images/marcus.jpg">
+<img class="macce" src="images/linus.jpg">
+<div class="leftmargin">
     <h3>Marcus Larsson, 25 år</h3>
     <p>Marcus är en passionerad själ som älskar att utforska världen runt honom. Med ett ständigt leende och ett hjärta fyllt av äventyrslust är han redo att ta sig an livets utmaningar och skapa minnen som varar för evigt. Hans öppna sinne och vänliga natur gör honom till en enkel person att umgås med och han värdesätter ärlighet och lojalitet högt. När han inte är upptagen med att utforska nya platser, kan du hitta Marcus njutande av en god bok eller lyssnande på sin favoritmusik. Han är också en passionerad idrottare och älskar att spendera tid utomhus, oavsett om det är för en löptur i parken eller en dag på fotbollsplanen med vänner.
      <br>
      <br>
         Marcus söker någon som delar hans passion för livet och är redo att ge allt för att bygga en djup och meningsfull relation. Han är öppen för nya möten och ser fram emot att lära känna någon speciell som kan följa med honom på hans livsäventyr. Om du är redo för spänning och äventyr, kan Marcus vara den perfekta matchningen för dig.</p>
         <a href="skickaflirt.html"><button class="flirtknapp">Skicka en flirt</button></a>
+    </div>
    <br>
    <br>
    <br>
@@ -77,6 +79,7 @@
    <br>
    <br>
    <img class="benjamin" src="images/benjamin.jpg">
+   <div class="leftmargin"> 
     <h3>Benjamin Olsson, 30 år</h3>
     <p>Benjamin är en kreativ själ med ett oändligt sinne för fantasi och innovation. Med en passion för konst, litteratur och musik är han alltid på jakt efter nya sätt att uttrycka sig och inspirera andra. Hans energi och entusiasm är smittsamma, och han har en förmåga att se skönheten och potentialen i världen runt omkring sig. Som en sann visionär strävar Benjamin alltid efter att skapa något unikt och meningsfullt. Han är inte rädd för att tänja på gränserna och utforska okända territorier i sin kreativa process. Oavsett om det är genom att måla en tavla, skriva en berättelse eller spela ett nytt instrument, är han dedikerad till att uttrycka sig själv på sitt mest autentiska sätt.
         <br>
@@ -84,7 +87,7 @@
         Utöver sin kreativa passion är Benjamin också en varm och omtänksam individ som värdesätter djupa och meningsfulla relationer. Han är en lyhörd lyssnare och en lojal vän som alltid finns där för dem som behöver stöd och uppmuntran.
         För den som söker en partner med en djupgående känsla för skönhet och kreativitet, kan Benjamin vara den perfekta matchningen för att utforska livets konstnärliga äventyr tillsammans med.</p>
         <a href="skickaflirt.html"><button class="flirtknapp">Skicka en flirt</button></a>
-
+    </div>
    <br>
    <br>
    <br>
