--- a/preferenser.html
+++ b/preferenser.html
@@ -118,7 +118,7 @@
         <label for="meat">Livstil</label>
         <br>
         <br>
-        <input type="button" value="Skicka in" class="skickainknapp">
+        <a href="preferenslista.html"><button class="skickainknapp">Skicka in</button></a>
         <br>
         <br>
         <br>
