--- a/chat.html
+++ b/chat.html
@@ -66,7 +66,7 @@
 
 
 <br>
-        <input type="button" value="Skicka" class="skickaknapp">
+        <input type="button" value="Skicka" class="skickainknapp">
 <br> 
 
 </div>
