--- a/preferenslista.html
+++ b/preferenslista.html
@@ -45,7 +45,7 @@
 <h1 class="matchningar">Dina matchningar</h1> 
 
 <br>
-<img class="macce" src="images/linus.jpg">
+<img class="macce" src="images/macce.jpg" height="350px" width="500px">
 <div class="leftmargin">
     <h3>Marcus Larsson, 25 år</h3>
     <p>Marcus är en passionerad själ som älskar att utforska världen runt honom. Med ett ständigt leende och ett hjärta fyllt av äventyrslust är han redo att ta sig an livets utmaningar och skapa minnen som varar för evigt. Hans öppna sinne och vänliga natur gör honom till en enkel person att umgås med och han värdesätter ärlighet och lojalitet högt. När han inte är upptagen med att utforska nya platser, kan du hitta Marcus njutande av en god bok eller lyssnande på sin favoritmusik. Han är också en passionerad idrottare och älskar att spendera tid utomhus, oavsett om det är för en löptur i parken eller en dag på fotbollsplanen med vänner.
